--- a/FrontPage/css/gallery.css
+++ b/FrontPage/css/gallery.css
@@ -13,6 +13,7 @@ body {
   
   .card {
     position: relative;
+    max-width: 500px;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 1rem;
@@ -21,7 +22,6 @@ body {
   
   .card img {
     width: 100%;
-    height: auto;
     object-fit: cover;
   }
   
