--- a/FrontPage/css/home.css
+++ b/FrontPage/css/home.css
@@ -6,9 +6,9 @@ body {
 }
 
 .hero-section {
-    background-image: url('https://via.placeholder.com/1200');
+    background-image: url('https://scontent.fmnl25-4.fna.fbcdn.net/v/t1.15752-9/339435993_761554465633397_4886018276513841023_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=ae9488&_nc_ohc=hnyyoHe7FiQAX9P_8US&_nc_oc=AQn9fSF4ry_bDjdyhQf5Xegh_XlP0Wbk_wFQqrIdjaStPZk0EUoitex9pAKu4vlNtsZdMTyD9ZxGD9u-RbuXh9QT&_nc_ht=scontent.fmnl25-4.fna&oh=03_AdTsFFghwu0w3GFfFD7fgUQVNyW5VppulfxvmQA8PcIAbA&oe=64660969');
     background-size: cover;
-    height: 400px;
+    height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,7 +37,8 @@ h2 {
 
 .left-column img {
     width: 100%;
-    max-width: 500px;
+    height: 100%;
+    object-fit: cover;
     display: block;
     margin: 0 auto;
 }
@@ -45,6 +46,8 @@ h2 {
 .right-column {
     flex: 1;
     padding-left: 30px;
+    padding-right: 20px;
+
 }
 
 h3, h4 {
@@ -58,6 +61,7 @@ ul {
 }
 
 .additional-content {
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
