--- a/FrontPage/css/nav.css
+++ b/FrontPage/css/nav.css
@@ -12,9 +12,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f1f5f8;
+    background-color: #fff;
     padding: 0 1rem;
-    height: 60px;
+    height: 90px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
@@ -41,6 +41,7 @@
   
   .nav-link:hover {
     color: #4b5563;
+    
   }
   
 
@@ -62,7 +63,9 @@
     transform: scaleX(1);
   }
   
-.active {
+.active:before {
         color: #4b5563;
+        visibility: visible;
+        transform: scaleX(1);
  }
   
