--- a/FrontPage/css/register.css
+++ b/FrontPage/css/register.css
@@ -46,6 +46,9 @@ section {
 	padding: 20px;
 	margin-bottom: 30px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 section h2 {
@@ -75,6 +78,7 @@ input[type="password"],
 input[type="date"],
 input[type="number"],
 input[type="tel"],
+input, 
 select {
 	font-size: 18px;
 	padding: 10px;
@@ -83,6 +87,8 @@ select {
 	border-radius: 5px;
 	background-color: #F6F6F6;
 	color: #333333;
+	display: inline-block;
+    width: 100%;
 }
 
 button {
