--- a/FrontPage/css/news.css
+++ b/FrontPage/css/news.css
@@ -103,9 +103,9 @@
   }
   
   .left-column img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+    width: 1100px;
+    height: 500px;
+    object-fit: contain;
   }
   
   .small-images {
